--- a/ClientApp/src/app/fetch-data/fetch-data.component.html
+++ b/ClientApp/src/app/fetch-data/fetch-data.component.html
@@ -10,34 +10,42 @@
           <input type="checkbox"
                  id="nestedIngredient"
                  [(ngModel)]="nestedIngredient.userOwns"
-                 (change)="OnIngredientClicked(nestedIngredient.userOwns, nestedIngredient.id )"/> {{nestedIngredient.ingredient.name}}
+                 (change)="OnIngredientClicked(nestedIngredient.userOwns, nestedIngredient.id )" /> {{nestedIngredient.ingredient.name}}
         </div>
       </div>
     </div>
   </div>
 </div>
 <div class="row">
-  <div class="card">
-    <div class="card-body">
-      <h5 class="card-title">Add New Recipe</h5>
-      <div>
-        <form [formGroup]="recipeForm" (ngSubmit)="onSubmit()">
-          <input type="text" id="name" name="name" placeholder="Recipe Name" formControlName="name" class="form-control">
-          <button type="button" (click)="addIngredient()" class="btn btn-primary"><i class="fa fa-plus"></i></button>
-          <div formArrayName="recipeIngredients">
-            <div *ngFor="let ingredient of recipeIngredients().controls; let i=index">
-              <div class="input-group mb-3" formGroupName="{{i}}">
-                <div formGroupName="ingredient">
-                  <input type="text" placeholder="Ingredient" name="name" formControlName="name" class="form-control">
-                  <div class="input-group-append">
-                    <button (click)="removeIngredient(i)" class="btn btn-danger"><i class="fa fa-trash"></i></button>
+  <div class="col-lg-4">
+    <div class="card">
+      <div class="card-body">
+        <h5 class="card-title">Add New Recipe</h5>
+        <div>
+          <form [formGroup]="recipeForm" (ngSubmit)="onSubmit()">
+            <div class="input-group mb-3">
+              <input type="text" id="name" name="name" placeholder="Recipe Name" formControlName="name" class="form-control">
+              <div class="input-group-append">
+                <button type="button" (click)="addIngredient()" class="btn btn-primary"><i class="fa fa-plus"></i></button>
+              </div>
+            </div>
+
+
+            <div formArrayName="recipeIngredients">
+              <div *ngFor="let ingredient of recipeIngredients().controls; let i=index">
+                <div formGroupName="{{i}}">
+                  <div class="input-group mb-3" formGroupName="ingredient">
+                    <input type="text" class="form-control" placeholder="Ingredient" name="name" formControlName="name">
+                    <div class="input-group-append">
+                      <button (click)="removeIngredient(i)" class="btn btn-danger"><i class="fa fa-trash"></i></button>
+                    </div>
                   </div>
                 </div>
               </div>
             </div>
-          </div>
-          <button type="submit" class="btn btn-success">Submit</button>
-        </form>
+            <button type="submit" class="btn btn-success">Submit</button>
+          </form>
+        </div>
       </div>
     </div>
   </div>
